force-app/main/default/objects/Skill_Master__c/Skill_Master__c.object-meta.xml
<CustomObject>
    <label>Skill Master</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Skill Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>