force-app/main/default/objects/Skill_Master__c/fields/Assign_to_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_to_Queue__c</fullName>
    <description>Assign to Queue</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Assign to Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>