force-app/main/default/objects/Skill_Master__c/fields/Journey__c.field-meta.xml
<CustomField>
    <fullName>Journey__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Journey</label>
    <length>100</length>
    <type>Text</type>
</CustomField>