force-app/main/default/objects/Skill_Master__c/fields/Problem_Type__c.field-meta.xml
<CustomField>
    <fullName>Problem_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Problem Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>