force-app/main/default/objects/Skill_Master__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Segment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>