force-app/main/default/objects/Skill_Master__c/fields/Service_Level1__c.field-meta.xml
<CustomField>
    <fullName>Service_Level1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Level1</label>
    <length>20</length>
    <type>Text</type>
</CustomField>