force-app/main/default/objects/Skill_Master__c/fields/Service_Level3__c.field-meta.xml
<CustomField>
    <fullName>Service_Level3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Level3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>