force-app/main/default/objects/Skill_Master__c/fields/Social_Network__c.field-meta.xml
<CustomField>
    <fullName>Social_Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>