force-app/main/default/objects/Skill_Master__c/fields/Topic_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Topic_Profile_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Topic Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>