force-app/main/default/objects/Skill_Master__c/fields/Validate_Code__c.field-meta.xml
<CustomField>
    <fullName>Validate_Code__c</fullName>
    <description>This field for define code to validate in case validation rule</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field for define service code to use in validation rule, report, back end integration.</inlineHelpText>
    <label>Service Type Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>